# jot

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  RELEASES.md  dist-workspace.toml
.github/: RELEASE_PROCESS.md
.github/workflows/: ci.yml.deprecated  cli-ci.yml  server-ci.yml
cli/: AUDIT_REPORT.md  Cargo.toml  README.md
cli/src/: app_config.rs  db.rs  editor.rs  formatters.rs  init.rs  main.rs  model.rs  profile.rs  prune.rs
cli/src/args/: mod.rs
cli/src/commands/: login.rs  mod.rs  note.rs  profile.rs
cli/src/test/: asserts.rs  e2e.rs  mod.rs  note_operations.rs  test_context.rs
cli/src/utils/: date_source.rs  date_target.rs
cli/src/web_client/: mock.rs
cli/test_assets/profile/: local.toml
core/: Cargo.toml
core/src/: db.rs  lib.rs  models.rs  schema.rs  sync.rs
docs/: PRODUCT_OVERVIEW.md  TECHNICAL_ARCHITECTURE.md
server/: AUDIT_REPORT.md  Cargo.toml
server/migrations/: 20241213163053_device_auth.sql
server/src/: jwt.rs  main.rs  state.rs
server/src/db/: auth.rs  mod.rs  notes.rs  user.rs
server/src/errors/: mod.rs
server/src/model/: auth.rs  mod.rs  user.rs
server/src/router/: auth.rs  health.rs  mod.rs  note.rs  sync.rs
server/src/test/: note.rs
