[package]
name = "jot-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
jot-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
directories = "5.0.1"
serde = "1.0.210"
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = { version = "1.0.45", features = ["backtrace"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
webbrowser = "1.0.3"
termcolor = "1.4.1"
tempfile = "3.8"

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
assert_cmd = "2.0"
predicates = "3.0"
