[package]
name = "jot-core"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"
